deploy: QuantumPL/site@fc95be72b43b304f4cbdded0a7085815828f6686

--- a/404.html
+++ b/404.html
@@ -138,8 +138,8 @@
 <li><a href=/bib/publication/>Publications</a></li>
 <li><a href=/bib/publication/Choudhury2022a/>Scheme Pearl: Quantum Continuations</a></li>
 <li><a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a></li>
+<li><a href=/bib/publication/DiazCaro2022a/>Quantum Control in the Unitary Sphere: Lambda-S1 and its Categorical Model</a></li>
 <li><a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
-<li><a href=/bib/publication/Fu2022b/>Linear Dependent Type Theory for Quantum Programming Languages</a></li>
 </ul>
 </div>
 </div>
