--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -159,6 +159,12 @@ Quipper and Proto-Quipper are a family of quantum programming languages that, by
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/DiazCaro2022/>A Quick Overview on the Quantum Control Approach to the Lambda Calculus</a></h2>
+<div class=article-style>
+In this short overview, we start with the basics of quantum computing, explaining the difference between the quantum and the classical control paradigms. We give an overview of the quantum control line of research within the lambda calculus, ranging …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Peduri2022/>QSSA: An SSA-Based IR for Quantum Computing</a></h2>
 <div class=article-style>
 Quantum computing hardware has progressed rapidly. Simultaneously, there has been a proliferation of programming languages and program optimization tools for quantum computing. Existing quantum compilers use intermediate representations (IRs) where …
@@ -192,6 +198,12 @@ We introduce the monoidal closed category qCPO of quantum cpos, whose objects ar
 <h2><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></h2>
 <div class=article-style>
 As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum programs. In classical computing, formal verification and sound static type systems prevent several classes of bugs …
+</div>
+</div>
+<div>
+<h2><a href=/bib/publication/DiazCaro2021/>A New Connective in Natural Deduction, and Its Application to Quantum Computing</a></h2>
+<div class=article-style>
+We investigate an unsuspected connection between non-harmonious logical connectives, such as Prior's tonk, and quantum computing. We argue that non-harmonious connectives model the information erasure, the non-reversibility, and the non-determinism …
 </div>
 </div>
 <div>
@@ -303,6 +315,12 @@ Quantum Hoare logic allows us to reason about quantum programs. We present an ex
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/DiazCaro2019/>Realizability in the Unitary Sphere</a></h2>
+<div class=article-style>
+In this paper we present a semantics for a linear algebraic lambda-calculus based on realizability. This semantics characterizes a notion of unitarity in the system, answering a long standing issue. We derive from the semantics a set of typing rules …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Amy2019b/>Sized Types for Low-Level Quantum Metaprogramming</a></h2>
 <div class=article-style>
 One of the most fundamental aspects of quantum circuit design is the concept of families of circuits parametrized by an instance size. As in classical programming, metaprogramming allows the programmer to write entire families of circuits …
@@ -375,6 +393,18 @@ We describe an embedding of the QWIRE quantum circuit language in the Coq proof 
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/DiazCaro2017a/>A Lambda Calculus for Density Matrices with Classical and Probabilistic Controls</a></h2>
+<div class=article-style>
+In this paper we present two flavors of a quantum extension to the lambda calculus. The first one, 𝜆𝜌, follows the approach of classical control/quantum data, where the quantum data is represented by density matrices. We provide an interpretation for …
+</div>
+</div>
+<div>
+<h2><a href=/bib/publication/DiazCaro2017/>Typing Quantum Superpositions and Measurement</a></h2>
+<div class=article-style>
+We propose a way to unify two approaches of non-cloning in quantum lambda-calculi. The first approach is to forbid duplicating variables, while the second is to consider all lambda-terms as algebraic-linear functions. We illustrate this idea by …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Paolini2017/>qPCF: A Language for Quantum Circuit Computations</a></h2>
 <div class=article-style>
 We propose qPCF, a functional language able to define and manipulate quantum circuits in an easy and intuitive way. qPCF follows the tradition of "quantum data & classical control" languages, inspired to the QRAM model. Ideally, qPCF computes finite …
@@ -444,6 +474,12 @@ The field of quantum algorithms is vibrant. Still, there is currently a lack of 
 <h2><a href=/bib/publication/Grattage2011/>An Overview of QML With a Concrete Implementation in Haskell</a></h2>
 <div class=article-style>
 This paper gives an introduction to and overview of the functional quantum programming language QML. The syntax of this language is defined and explained, along with a new QML definition of the quantum teleport algorithm. The categorical operational …
+</div>
+</div>
+<div>
+<h2><a href=/bib/publication/DiazCaro2011/>Measurements and Confluence in Quantum Lambda Calculi With Explicit Qubits</a></h2>
+<div class=article-style>
+This paper demonstrates how to add a measurement operator to quantum λ-calculi. A proof of the consistency of the semantics is given through a proof of confluence presented in a sufficiently general way to allow this technique to be used for other …
 </div>
 </div>
 <div>
