--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -153,6 +153,12 @@ Quantum assembly languages are machine-independent languages that traditionally 
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/DiazCaro2022a/>Quantum Control in the Unitary Sphere: Lambda-S1 and its Categorical Model</a></h2>
+<div class=article-style>
+In a recent paper, a realizability technique has been used to give a semantics of a quantum lambda calculus. Such a technique gives rise to an infinite number of valid typing rules, without giving preference to any subset of those. In this paper, we …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a></h2>
 <div class=article-style>
 We present a multilevel quantum-classical intermediate representation (IR) that enables an optimizing, retargetable compiler for available quantum languages. Our work builds upon the multilevel intermediate representation (MLIR) framework and …
@@ -318,6 +324,12 @@ We describe categorical models of a circuit-based (quantum) functional programmi
 <h2><a href=/bib/publication/Zorzi2019/>Quantum Calculi---From Theory to Language Design</a></h2>
 <div class=article-style>
 In the last 20 years, several approaches to quantum programming have been introduced. In this survey, we focus on the QRAM (Quantum Random Access Machine) architectural model. We explore the twofold perspective (theoretical and concrete) of the …
+</div>
+</div>
+<div>
+<h2><a href=/bib/publication/DiazCaro2019a/>Two linearities for quantum computing in the lambda calculus</a></h2>
+<div class=article-style>
+We propose a way to unify two approaches of non-cloning in quantum lambda-calculi: logical and algebraic linearities. The first approach is to forbid duplicating variables, while the second is to consider all lambda-terms as algebraic-linear …
 </div>
 </div>
 <div>
