--- a/publication/Baez2010/index.html
+++ b/publication/Baez2010/index.html
@@ -190,9 +190,10 @@ Book section
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Selinger2004/>A Brief Survey of Quantum Programming Languages</a></li>
+<li><a href=/bib/publication/DiazCaro2019a/>Two linearities for quantum computing in the lambda calculus</a></li>
+<li><a href=/bib/publication/DiazCaro2019/>Realizability in the Unitary Sphere</a></li>
 <li><a href=/bib/publication/Huot2019/>Universal Properties in Quantum Theory</a></li>
-<li><a href=/bib/publication/DalLago2017/>The Geometry of Parallelism: Classical, Probabilistic, and Quantum Effects</a></li>
-<li><a href=/bib/publication/Vizzotto2009/>The Arrow Calculus as a Quantum Programming Language</a></li>
+<li><a href=/bib/publication/DiazCaro2017a/>A Lambda Calculus for Density Matrices with Classical and Probabilistic Controls</a></li>
 </ul>
 </div>
 </div>
