--- a/publication/index.html
+++ b/publication/index.html
@@ -382,6 +382,37 @@ arXiv
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/DiazCaro2022a/>Quantum Control in the Unitary Sphere: Lambda-S1 and its Categorical Model</a>
+</div>
+<a href=/bib/publication/DiazCaro2022a/ class=summary-link>
+<div class=article-style>
+In a recent paper, a realizability technique has been used to give a semantics of a quantum lambda calculus. Such a technique gives …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Alejandro-Diaz-Caro/>Alejandro Díaz-Caro</a></span>, <span>
+<a href=/bib/author/Octavio-Malherbe/>Octavio Malherbe</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/DiazCaro2022a/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.46298/lmcs-18%283:32%292022 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a>
 </div>
 <a href=/bib/publication/Cross2022/ class=summary-link>
@@ -965,6 +996,36 @@ The interest in quantum computing is growing, and with it, the importance of sof
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3527330 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2022">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/DiazCaro2022/>A Quick Overview on the Quantum Control Approach to the Lambda Calculus</a>
+</div>
+<a href=/bib/publication/DiazCaro2022/ class=summary-link>
+<div class=article-style>
+In this short overview, we start with the basics of quantum computing, explaining the difference between the quantum and the classical …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Alejandro-Diaz-Caro/>Alejandro Díaz-Caro</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/DiazCaro2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4204/eptcs.357.1 target=_blank rel=noopener>
 DOI
 </a>
 </div>
@@ -1837,6 +1898,37 @@ DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://hal.archives-ouvertes.fr/hal-03154573/ target=_blank rel=noopener>
 HAL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/DiazCaro2021/>A New Connective in Natural Deduction, and Its Application to Quantum Computing</a>
+</div>
+<a href=/bib/publication/DiazCaro2021/ class=summary-link>
+<div class=article-style>
+We investigate an unsuspected connection between non-harmonious logical connectives, such as Prior&rsquo;s tonk, and quantum computing. …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Alejandro-Diaz-Caro/>Alejandro Díaz-Caro</a></span>, <span>
+<a href=/bib/author/Gilles-Dowek/>Gilles Dowek</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/DiazCaro2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/978-3-030-85315-0_11 target=_blank rel=noopener>
+DOI
 </a>
 </div>
 </div>
@@ -2866,6 +2958,41 @@ URL
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/DiazCaro2019a/>Two linearities for quantum computing in the lambda calculus</a>
+</div>
+<a href=/bib/publication/DiazCaro2019a/ class=summary-link>
+<div class=article-style>
+We propose a way to unify two approaches of non-cloning in quantum lambda-calculi: logical and algebraic linearities. The first …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Alejandro-Diaz-Caro/>Alejandro Díaz-Caro</a></span>, <span>
+<a href=/bib/author/Gilles-Dowek/>Gilles Dowek</a></span>, <span>
+<a href=/bib/author/Juan-Pablo-Rinaldi/>Juan Pablo Rinaldi</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/DiazCaro2019a/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1016/j.biosystems.2019.104012 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/1601.04294 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2019">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Zorzi2019/>Quantum Calculi---From Theory to Language Design</a>
 </div>
 <a href=/bib/publication/Zorzi2019/ class=summary-link>
@@ -2985,6 +3112,42 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/978-3-030-25543-5_12 target=_blank rel=noopener>
 DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/DiazCaro2019/>Realizability in the Unitary Sphere</a>
+</div>
+<a href=/bib/publication/DiazCaro2019/ class=summary-link>
+<div class=article-style>
+In this paper we present a semantics for a linear algebraic lambda-calculus based on realizability. This semantics characterizes a …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Alejandro-Diaz-Caro/>Alejandro Díaz-Caro</a></span>, <span>
+<a href=/bib/author/Mauricio-Guillermo/>Mauricio Guillermo</a></span>, <span>
+<a href=/bib/author/Alexandre-Miquel/>Alexandre Miquel</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/DiazCaro2019/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1109/LICS.2019.8785834 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/1904.08785 target=_blank rel=noopener>
+arXiv
 </a>
 </div>
 </div>
@@ -4043,6 +4206,67 @@ DOI
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2017">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/DiazCaro2017/>Typing Quantum Superpositions and Measurement</a>
+</div>
+<a href=/bib/publication/DiazCaro2017/ class=summary-link>
+<div class=article-style>
+We propose a way to unify two approaches of non-cloning in quantum lambda-calculi. The first approach is to forbid duplicating …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Alejandro-Diaz-Caro/>Alejandro Díaz-Caro</a></span>, <span>
+<a href=/bib/author/Gilles-Dowek/>Gilles Dowek</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/DiazCaro2017/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/978-3-319-71069-3_22 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2017">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/DiazCaro2017a/>A Lambda Calculus for Density Matrices with Classical and Probabilistic Controls</a>
+</div>
+<a href=/bib/publication/DiazCaro2017a/ class=summary-link>
+<div class=article-style>
+In this paper we present two flavors of a quantum extension to the lambda calculus. The first one, 𝜆𝜌, follows the approach of …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Alejandro-Diaz-Caro/>Alejandro Díaz-Caro</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/DiazCaro2017a/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/978-3-319-71237-6_22 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2017">
 <div class="media stream-item">
 <div class=media-body>
@@ -5033,6 +5257,42 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1088/1367-2630/13/4/043016 target=_blank rel=noopener>
 DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2011">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/DiazCaro2011/>Measurements and Confluence in Quantum Lambda Calculi With Explicit Qubits</a>
+</div>
+<a href=/bib/publication/DiazCaro2011/ class=summary-link>
+<div class=article-style>
+This paper demonstrates how to add a measurement operator to quantum λ-calculi. A proof of the consistency of the semantics is given …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Alejandro-Diaz-Caro/>Alejandro Díaz-Caro</a></span>, <span>
+<a href=/bib/author/Pablo-Arrighi/>Pablo Arrighi</a></span>, <span>
+<a href=/bib/author/Manuel-Gadella/>Manuel Gadella</a></span>, <span>
+<a href=/bib/author/Jonathan-Grattage/>Jonathan Grattage</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/DiazCaro2011/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1016/j.entcs.2011.01.006 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/ target=_blank rel=noopener>
+arXiv
 </a>
 </div>
 </div>
