--- a/index.html
+++ b/index.html
@@ -165,27 +165,6 @@ Quickly discover relevant papers by <a href=./publication/>filtering publication
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
-<a href=/bib/author/Thomas-Haner/>Thomas Häner</a></span>, <span>
-<a href=/bib/author/Vadym-Kliuchnikov/>Vadym Kliuchnikov</a></span>, <span>
-<a href=/bib/author/Martin-Roetteler/>Martin Roetteler</a></span>, <span>
-<a href=/bib/author/Mathias-Soeken/>Mathias Soeken</a></span>, <span>
-<a href=/bib/author/Alexander-Vaschillo/>Alexander Vaschillo</a></span>
-</span>
-(2022).
-<a href=/bib/publication/Haner2022/>QParallel: Explicit Parallelism for Programming Quantum Computers</a>.
-<p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Haner2022/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2210.03680 target=_blank rel=noopener>
-arXiv
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
 <a href=/bib/author/Charles-Yuan/>Charles Yuan</a></span>, <span>
 <a href=/bib/author/Michael-Carbin/>Michael Carbin</a></span>
 </span>
@@ -240,6 +219,49 @@ URL
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
+<a href=/bib/author/Thomas-Haner/>Thomas Häner</a></span>, <span>
+<a href=/bib/author/Vadym-Kliuchnikov/>Vadym Kliuchnikov</a></span>, <span>
+<a href=/bib/author/Martin-Roetteler/>Martin Roetteler</a></span>, <span>
+<a href=/bib/author/Mathias-Soeken/>Mathias Soeken</a></span>, <span>
+<a href=/bib/author/Alexander-Vaschillo/>Alexander Vaschillo</a></span>
+</span>
+(2022).
+<a href=/bib/publication/Haner2022/>QParallel: Explicit Parallelism for Programming Quantum Computers</a>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Haner2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2210.03680 target=_blank rel=noopener>
+arXiv
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
+<a href=/bib/author/Thien-Nguyen/>Thien Nguyen</a></span>, <span>
+<a href=/bib/author/Alexander-McCaskey/>Alexander McCaskey</a></span>
+</span>
+(2022).
+<a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a>.
+<em>IEEE Micro</em>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Nguyen2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1109/MM.2022.3179654 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2109.00506 target=_blank rel=noopener>
+arXiv
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
 <a href=/bib/author/Peng-Fu/>Peng Fu</a></span>, <span>
 <a href=/bib/author/Kohei-Kishida/>Kohei Kishida</a></span>, <span>
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>
@@ -253,40 +275,6 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.46298/lmcs-18%283:28%292022 target=_blank rel=noopener>
 DOI
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
-<a href=/bib/author/Andrew-W.-Cross/>Andrew W. Cross</a></span>, <span>
-<a href=/bib/author/Ali-Javadi-Abhari/>Ali Javadi-Abhari</a></span>, <span>
-<a href=/bib/author/Thomas-Alexander/>Thomas Alexander</a></span>, <span>
-<a href=/bib/author/Niel-de-Beaudrap/>Niel de Beaudrap</a></span>, <span>
-<a href=/bib/author/Lev-S.-Bishop/>Lev S. Bishop</a></span>, <span>
-<a href=/bib/author/Steven-Heidel/>Steven Heidel</a></span>, <span>
-<a href=/bib/author/Colm-A.-Ryan/>Colm A. Ryan</a></span>, <span>
-<a href=/bib/author/Prasahnt-Sivarajah/>Prasahnt Sivarajah</a></span>, <span>
-<a href=/bib/author/John-Smolin/>John Smolin</a></span>, <span>
-<a href=/bib/author/Jay-M.-Gambetta/>Jay M. Gambetta</a></span>, <span>
-<a href=/bib/author/Blake-R.-Johnson/>Blake R. Johnson</a></span>
-</span>
-(2022).
-<a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a>.
-<em>ACM Transactions on Quantum Computing</em>.
-<p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Cross2022/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3505636 target=_blank rel=noopener>
-DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2104.14722 target=_blank rel=noopener>
-arXiv
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://openqasm.com/ target=_blank rel=noopener>
-URL
 </a>
 </p>
 </div>
@@ -384,14 +372,14 @@ So I decided to move the GitHub repo to its own organization and set up this Hug
 </div>
 <div class="col-12 col-lg-8">
 <div class=tag-cloud>
-<a href=/bib/tag/formal-verification/ style=font-size:.869348400732556rem>formal verification</a>
-<a href=/bib/tag/hoare-logic/ style=font-size:1.0103273414214025rem>hoare logic</a>
-<a href=/bib/tag/programming-languages/ style=font-size:1.2849551985145076rem>programming languages</a>
+<a href=/bib/tag/formal-verification/ style=font-size:.8620888274629097rem>formal verification</a>
+<a href=/bib/tag/hoare-logic/ style=font-size:.997024327853645rem>hoare logic</a>
+<a href=/bib/tag/programming-languages/ style=font-size:1.2598795254954107rem>programming languages</a>
 <a href=/bib/tag/proto-quipper-m/ style=font-size:.7rem>proto-quipper-m</a>
-<a href=/bib/tag/quantum-computation/ style=font-size:1.1310918554338554rem>quantum computation</a>
-<a href=/bib/tag/quantum-computing/ style=font-size:1.9796637879183816rem>quantum computing</a>
-<a href=/bib/tag/quantum-programming/ style=font-size:1.2849551985145076rem>quantum programming</a>
-<a href=/bib/tag/quantum-programming-languages/ style=font-size:.942778342781621rem>quantum programming languages</a>
+<a href=/bib/tag/quantum-computation/ style=font-size:1.112611947168219rem>quantum computation</a>
+<a href=/bib/tag/quantum-computing/ style=font-size:1.9818478784537317rem>quantum computing</a>
+<a href=/bib/tag/quantum-programming/ style=font-size:1.2598795254954107rem>quantum programming</a>
+<a href=/bib/tag/quantum-programming-languages/ style=font-size:.9323709981590409rem>quantum programming languages</a>
 </div>
 </div>
 </div>
