--- a/publication/Selinger2004/index.html
+++ b/publication/Selinger2004/index.html
@@ -192,9 +192,9 @@ Conference paper
 <ul>
 <li><a href=/bib/publication/Vizzotto2009/>The Arrow Calculus as a Quantum Programming Language</a></li>
 <li><a href=/bib/publication/Chardonnet2021/>Geometry of Interaction for ZX-Diagrams</a></li>
+<li><a href=/bib/publication/DiazCaro2019a/>Two linearities for quantum computing in the lambda calculus</a></li>
+<li><a href=/bib/publication/DiazCaro2017/>Typing Quantum Superpositions and Measurement</a></li>
 <li><a href=/bib/publication/Hasuo2017/>Semantics of higher-order quantum computation via geometry of interaction</a></li>
-<li><a href=/bib/publication/DalLago2017/>The Geometry of Parallelism: Classical, Probabilistic, and Quantum Effects</a></li>
-<li><a href=/bib/publication/Vizzotto2009a/>Reasoning about General Quantum Programs over Mixed States</a></li>
 </ul>
 </div>
 </div>
