deploy: QuantumPL/site@a317ed8114c00c8a5aa47a1bce6380220049443c

--- a/publication/DiazCaro2021/index.html
+++ b/publication/DiazCaro2021/index.html
@@ -145,6 +145,9 @@ Cite
 <a class="btn btn-outline-primary btn-page-header" href=https://doi.org/10.1007/978-3-030-85315-0_11 target=_blank rel=noopener>
 DOI
 </a>
+<a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/2012.08994 target=_blank rel=noopener>
+arXiv
+</a>
 </div>
 </div>
 <div class=article-container>
