--- a/publication/index.html
+++ b/publication/index.html
@@ -1930,6 +1930,9 @@ Cite
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/978-3-030-85315-0_11 target=_blank rel=noopener>
 DOI
 </a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2012.08994 target=_blank rel=noopener>
+arXiv
+</a>
 </div>
 </div>
 <div class=ml-3>
