deploy: QuantumPL/site@fa2b5a7a2db8344752138fc0fcbbe55750868797

--- a/publication/index.html
+++ b/publication/index.html
@@ -2700,7 +2700,7 @@ DOI
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2003.10611 target=_blank rel=noopener>
 arXiv
 </a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/CQCL/pytket target=_blank rel=noopener>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/CQCL/tket target=_blank rel=noopener>
 URL
 </a>
 </div>
