deploy: QuantumPL/site@e795eac5f66ee12215cbc09c95817a4ace6ad4f9

--- a/publication/Fu2020a/index.html
+++ b/publication/Fu2020a/index.html
@@ -196,9 +196,9 @@ Conference paper
 <ul>
 <li><a href=/bib/publication/Fu2020/>Linear Dependent Type Theory for Quantum Programming Languages: Extended Abstract</a></li>
 <li><a href=/bib/publication/Fu2022b/>Linear Dependent Type Theory for Quantum Programming Languages</a></li>
+<li><a href=/bib/publication/Fu2023/>Proto-Quipper with Dynamic Lifting</a></li>
 <li><a href=/bib/publication/Mahmoud2019/>Formalization of Metatheory of the Quipper Quantum Programming Language in a Linear Logic</a></li>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
-<li><a href=/bib/publication/Green2013/>Quipper: A Scalable Quantum Programming Language</a></li>
 </ul>
 </div>
 </div>
