--- a/publication/Valiron2015/index.html
+++ b/publication/Valiron2015/index.html
@@ -190,11 +190,11 @@ Journal article
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Fu2023/>Proto-Quipper with Dynamic Lifting</a></li>
 <li><a href=/bib/publication/Fu2022a/>A biset-enriched categorical model for Proto-Quipper with dynamic lifting</a></li>
 <li><a href=/bib/publication/Ross2015/>Algebraic and Logical Methods in Quantum Computation</a></li>
 <li><a href=/bib/publication/Rios2018/>A Categorical Model for a Quantum Circuit Description Language (Extended Abstract)</a></li>
 <li><a href=/bib/publication/Green2013a/>An Introduction to Quantum Programming in Quipper</a></li>
-<li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 </ul>
 </div>
 </div>
