deploy: QuantumPL/site@84742f6dc5f99a4933efcc7ea998656964f6ec77

--- a/publication/Abramsky2004/index.html
+++ b/publication/Abramsky2004/index.html
@@ -200,8 +200,8 @@ Conference paper
 <li><a href=/bib/publication/Abramsky2008/>Categorical Quantum Mechanics</a></li>
 <li><a href=/bib/publication/Altenkirch2005/>A Functional Quantum Programming Language</a></li>
 <li><a href=/bib/publication/Unruh2019a/>Quantum Hoare Logic with Ghost Variables</a></li>
+<li><a href=/bib/publication/Singhal2023/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Xu2023/>Synthesizing Quantum-Circuit Optimizers</a></li>
-<li><a href=/bib/publication/Haner2022/>QParallel: Explicit Parallelism for Programming Quantum Computers</a></li>
 </ul>
 </div>
 </div>
