--- a/publication/DiazCaro2017/index.html
+++ b/publication/DiazCaro2017/index.html
@@ -191,8 +191,8 @@ Conference paper
 <li><a href=/bib/publication/DiazCaro2019a/>Two linearities for quantum computing in the lambda calculus</a></li>
 <li><a href=/bib/publication/Selinger2004/>A Brief Survey of Quantum Programming Languages</a></li>
 <li><a href=/bib/publication/DiazCaro2017a/>A Lambda Calculus for Density Matrices with Classical and Probabilistic Controls</a></li>
+<li><a href=/bib/publication/Singhal2023/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Xu2023/>Synthesizing Quantum-Circuit Optimizers</a></li>
-<li><a href=/bib/publication/Haner2022/>QParallel: Explicit Parallelism for Programming Quantum Computers</a></li>
 </ul>
 </div>
 </div>
