--- a/publication/DiazCaro2017a/index.html
+++ b/publication/DiazCaro2017a/index.html
@@ -188,9 +188,9 @@ Conference paper
 <ul>
 <li><a href=/bib/publication/DiazCaro2019a/>Two linearities for quantum computing in the lambda calculus</a></li>
 <li><a href=/bib/publication/DiazCaro2017/>Typing Quantum Superpositions and Measurement</a></li>
+<li><a href=/bib/publication/Singhal2023/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Xu2023/>Synthesizing Quantum-Circuit Optimizers</a></li>
 <li><a href=/bib/publication/Haner2022/>QParallel: Explicit Parallelism for Programming Quantum Computers</a></li>
-<li><a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
 </ul>
 </div>
 </div>
