--- a/publication/Tao2022/index.html
+++ b/publication/Tao2022/index.html
@@ -196,11 +196,11 @@ Conference paper
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Singhal2023/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Xu2023/>Synthesizing Quantum-Circuit Optimizers</a></li>
 <li><a href=/bib/publication/Haner2022/>QParallel: Explicit Parallelism for Programming Quantum Computers</a></li>
 <li><a href=/bib/publication/Li2022/>Verified Compilation of Quantum Oracles</a></li>
 <li><a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
-<li><a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a></li>
 </ul>
 </div>
 </div>
