--- a/publication/Yuan2022/index.html
+++ b/publication/Yuan2022/index.html
@@ -196,10 +196,10 @@ Journal article
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Ying2021a/>A proof system for disjoint parallel quantum programs</a></li>
+<li><a href=/bib/publication/Singhal2023/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Kang2023/>Modular Component-Based Quantum Circuit Synthesis</a></li>
 <li><a href=/bib/publication/Yuan2022a/>Tower: Data Structures in Quantum Superposition</a></li>
 <li><a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a></li>
-<li><a href=/bib/publication/Feng2022/>Verification of Distributed Quantum Programs</a></li>
 </ul>
 </div>
 </div>
