--- a/404.html
+++ b/404.html
@@ -130,8 +130,9 @@
 <p>Perhaps you were looking for one of these?</p>
 <h2>Latest</h2>
 <ul>
-<li><a href=/bib/publication/Xu2023/>Synthesizing Quantum-Circuit Optimizers</a></li>
+<li><a href=/bib/publication/Singhal2023/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/>Publications</a></li>
+<li><a href=/bib/publication/Xu2023/>Synthesizing Quantum-Circuit Optimizers</a></li>
 <li><a href=/bib/publication/Chen2023/>An Automata-Based Framework for Verification and Bug Hunting in Quantum Circuits</a></li>
 <li><a href=/bib/publication/Kang2023/>Modular Component-Based Quantum Circuit Synthesis</a></li>
 <li><a href=/bib/event/>Recent & Upcoming Events</a></li>
@@ -139,7 +140,6 @@
 <li><a href=/bib/publication/Voichick2023/>Qunity: A Unified Language for Quantum and Classical Computing</a></li>
 <li><a href=/bib/publication/Fu2023/>Proto-Quipper with Dynamic Lifting</a></li>
 <li><a href=/bib/publication/Zhou2023/>CoqQ: Foundational Verification of Quantum Programs</a></li>
-<li><a href=/bib/event/oopsla22/>Quantum at OOPSLA 2022</a></li>
 </ul>
 </div>
 </div>
