--- a/publication/Cross2017/index.html
+++ b/publication/Cross2017/index.html
@@ -171,8 +171,8 @@ URL
 <li><a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
 <li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
 <li><a href=/bib/publication/Amy2019b/>Sized Types for Low-Level Quantum Metaprogramming</a></li>
+<li><a href=/bib/publication/Singhal2023/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Xu2023/>Synthesizing Quantum-Circuit Optimizers</a></li>
-<li><a href=/bib/publication/Haner2022/>QParallel: Explicit Parallelism for Programming Quantum Computers</a></li>
 </ul>
 </div>
 </div>
