--- a/publication/DiazCaro2019a/index.html
+++ b/publication/DiazCaro2019a/index.html
@@ -196,8 +196,8 @@ Journal article
 <li><a href=/bib/publication/DiazCaro2017/>Typing Quantum Superpositions and Measurement</a></li>
 <li><a href=/bib/publication/Selinger2004/>A Brief Survey of Quantum Programming Languages</a></li>
 <li><a href=/bib/publication/DiazCaro2017a/>A Lambda Calculus for Density Matrices with Classical and Probabilistic Controls</a></li>
+<li><a href=/bib/publication/Singhal2023/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Xu2023/>Synthesizing Quantum-Circuit Optimizers</a></li>
-<li><a href=/bib/publication/Haner2022/>QParallel: Explicit Parallelism for Programming Quantum Computers</a></li>
 </ul>
 </div>
 </div>
