--- a/publication/Gay2005/index.html
+++ b/publication/Gay2005/index.html
@@ -199,8 +199,8 @@ Conference paper
 <li><a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a></li>
 <li><a href=/bib/publication/Mosca2019/>Quantum Programming Languages (Dagstuhl Seminar 18381)</a></li>
 <li><a href=/bib/publication/Unruh2019a/>Quantum Hoare Logic with Ghost Variables</a></li>
+<li><a href=/bib/publication/Singhal2023/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Chen2023/>An Automata-Based Framework for Verification and Bug Hunting in Quantum Circuits</a></li>
-<li><a href=/bib/publication/Xu2023/>Synthesizing Quantum-Circuit Optimizers</a></li>
 </ul>
 </div>
 </div>
