--- a/publication/Huot2019a/index.html
+++ b/publication/Huot2019a/index.html
@@ -196,8 +196,8 @@ Conference paper
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 <li><a href=/bib/publication/Heunen2019/>Categories for Quantum Theory: An Introduction</a></li>
 <li><a href=/bib/publication/Huot2019/>Universal Properties in Quantum Theory</a></li>
+<li><a href=/bib/publication/Singhal2023/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Xu2023/>Synthesizing Quantum-Circuit Optimizers</a></li>
-<li><a href=/bib/publication/Haner2022/>QParallel: Explicit Parallelism for Programming Quantum Computers</a></li>
 </ul>
 </div>
 </div>
