--- a/publication/Paolini2017/index.html
+++ b/publication/Paolini2017/index.html
@@ -188,9 +188,9 @@ Conference paper
 <ul>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 <li><a href=/bib/publication/Paykin2017/>QWIRE: A Core Language for Quantum Circuits</a></li>
+<li><a href=/bib/publication/Singhal2023/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Chen2023/>An Automata-Based Framework for Verification and Bug Hunting in Quantum Circuits</a></li>
 <li><a href=/bib/publication/Fu2023/>Proto-Quipper with Dynamic Lifting</a></li>
-<li><a href=/bib/publication/Fu2022b/>Linear Dependent Type Theory for Quantum Programming Languages</a></li>
 </ul>
 </div>
 </div>
